# dsa

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INTENT.md  README.md  TESTING.md  docker-compose.yml  package.json  railway.json  railway.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: check-lockfiles.sh
.github/workflows/: ci.yml
Arrays/: array_of_products.py  can_three_parts_eq_sum.py  find_three_largest.py  four_num_sum.py  is_monotonic.py  is_valid_subsequence.py  largest_number.py  largest_range.py  largest_unique_num.py  longest_peak.py  max_improvement.py  min_rewards.py  missing_num.py  move_element_to_end.py  pairs_with_k_diff.py  product_sum.py  set_mismatch.py  single_cycle_check.py  smallest_diff.py  three_num_sort.py  three_num_sum.py  three_sum_multi.py  two_num_sum.py
Arrays/Matrices/: search_in_sorted_matrix.py  spiral_traverse.py  toeplitz_matrix.py
Binary Search/: binary_search_iterative.py  binary_search_recursive.py
Bit Manipulation/: clear_bits_msb_through_i.py  get_bit.py  num_valid_words.py  set_bit.py  unset_bit.py
Dynamic Programming/: climb_stairs.py  fib_memoize.py  grid_traveler_dp.py  how_sum_memoize.py  knapsack_problem.py  levenshtein_distance.py  longest_common_subsequence.py  max_subset_sum_no_adjacent.py  min_coins_for_change.py  num_factored_binary_trees.py  num_ways_to_make_change.py
DynamicProgramming/: climb_stairs.py
Graphs/: BreadthFirstPaths.py  DepthFirstOrder.py  DepthFirstPaths.py  Digraph.py  Graph.py  dijkstras_algorithm.py  get_currency_rate.py  keys_and_rooms.py  num_islands.py
Graphs/Graphs - Undirected/: DepthFirstPaths.py
Hash Tables/: LinearProbingHashTable.py  SeparateChainingHashTable.py  group_anagrams.py  smallest_common_ele.py  two_number_sum.py
HashTables/: HashTableLinearProbing.py  LRU_Cache.py  find_mid_class.py  two_num_sum.py
Heaps/: MaxHeap.py
Linked Lists/: DoublyLinkedList.py  SinglyLinkedList.py  delete_middle_node.py  kth_to_last.py  palindrome_linked_list.py  remove_dups.py  swap_nodes.py
LinkedLists/: SinglyLinkedList.py
Math/: fill_max_squares.py  fill_max_squares_recurisve.py  find_multiples.py  get_nth_fib.py  powerset.py  reordered_power2.py
Priority Queue/: MaxPQ.py  MinPQ.py
Queue/: CircularQueue.py  Queue.py
RangeQueries/: SegmentTree.py
Recursion/: can_sum.py  every_other.py  generate_parenthesis.py  grid_traveler.py  is_palindrome.py  product.py  reverse_string.py
Sets/: HashSet.py
Sorting/: convex_hull.py  insertion_sort.py  knuth_shuffle.py  merge.py  merge_sort.py  quick_sort.py  selection_sort.py  shell_sort.py  shuffle_by_sort.py  shuffle_sort.py  sort_k_messed_array.py
Stack/: LinkedStack.py  MinMaxStack.py  Stack.py  arithmetic_eval.py  balanced_brackets.py
Strings/: can_spell.py  currency_validator.py  run_length_encoding.py  single_row_keyboard.py  strobogrammatic_nums.py  urlify.py
Trees/: avg_of_levels.py  invert_binary_tree.py  lowest_common_ancestor.py  node_depths.py  right_side_view.py
Union Find/: QuickUnionUF.py  UnionFind.py
algorithms/: conftest.py
api/: Dockerfile  nixpacks.toml  pyproject.toml  railway.toml
api/app/: __init__.py  main.py
api/app/routes/: algorithms.py
api/app/services/: __init__.py  registry.py
api/tests/: test_placeholder.py
docs/: PLAN.md  todo.md
project-euler/: largest_palindrome_product.py  smallest_multiple.py
web/: .gitignore  Dockerfile  biome.json  components.json  globals.d.ts  next.config.ts  nixpacks.toml  package.json  playwright.config.ts  railway.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+293 files in other folders)
